[tool.poetry]
name = "zoneit"
version = "0.1.7"
description = ""
authors = ["Hugo Caron <hca443@gmail.com>"]
readme = "README.md"
packages = [{ include = "zoneit" }]

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
python-dotenv = "^1.0.1"
dnspython = "^2.6.1"
pydantic = "^2.9.0"
fastapi = { extras = ["standard"], version = "^0.113.0" }
httpx = "^0.27.2"

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.3"
ruff-lsp = "^0.0.55"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]

[tool.ruff]
lint.extend-select = ["I"]
